# life-5

./: CMakeLists.txt  README.md  configure.h.in  main.cpp
common/: CMakeLists.txt
common/logging/: BoostLogger.cpp  BoostLogger.hpp  CMakeLists.txt  Logger.hpp  QtLogger.cpp  QtLogger.hpp
gui/: CMakeLists.txt
include/: CMakeLists.txt
include/life/: CMakeLists.txt
include/life/common/: CMakeLists.txt  Constants.hpp  Enums.hpp  MacroUtils.hpp  QtHelper.cpp  QtHelper.hpp  Traits.hpp  Types.hpp  TypesQDecl.ipp  Utils.cpp  Utils.hpp
include/life/common/data/: CMakeLists.txt
include/life/common/data/io/: AnalogInput.hpp  CMakeLists.txt  DigitalInput.hpp  DigitalOutput.hpp
include/life/common/logging/: BoostLogger.cpp  BoostLogger.hpp  CMakeLists.txt  Logger.hpp  QtLogger.cpp  QtLogger.hpp
include/life/common/settings/: CMakeLists.txt  IODescriptor.hpp  MachineParameter.hpp  SettingDescriptor.hpp  SettingsManager.cpp  SettingsManager.hpp  SettingsManagerExceptions.hpp
include/life/common/settings/descriptors/: AxisXDescriptor.hpp  AxisZDescriptor.hpp  CMakeLists.txt  Descriptors.hpp  SettingDescriptor.hpp
include/life/core/io/: CMakeLists.txt
include/life/core/io/data/: AnalogInputValue.hpp  CMakeLists.txt  DigitalInputValue.hpp  DigitalOutputValue.hpp
include/life/data/: CMakeLists.txt
include/life/gui/logic/: BaseController.hpp  CMakeLists.txt  FactoryQml.hpp  QmlBaseController.hpp  QmlHelper.hpp
include/life/gui/logic/controllers/: CMakeLists.txt  MainWindowCtrl.cpp  MainWindowCtrl.hpp  SettingsCtrl.cpp  SettingsCtrl.hpp  SettingsCtrlPrivate.hpp  SettingsDialogCtrl.cpp  SettingsDialogCtrl.hpp  SettingsDialogCtrlP.hpp
include/life/gui/logic/data/: CMakeLists.txt  MainWindowData.hpp  SettingsData.cpp  SettingsData.hpp  SettingsDialogData.cpp  SettingsDialogData.hpp
include/life/gui/resources/: CMakeLists.txt  resources.qrc
include/life/gui/resources/qml/: MainWindow.qml  SettingsDialog.qml
include/life/gui/resources/qml/settingsDialogPages/: FileSettingsPage.qml
qml-plugin/dv/theme/controls/: AppBar.qml  AppMenuButton.qml  Button.qml  CMakeLists.txt  DVTheme.cpp  DVTheme.hpp  DVThemeControlsPlugin.cpp  DVThemeControlsPlugin.hpp  FloatingButton.qml  FloatingButtonMini.qml  List.qml  SingleLineList.qml  TextField.qml  ThemeConstants.cpp  ThemeConstants.hpp  qmldir
tests/: IOTest.cpp  SettingsTest.cpp  Test1.cpp
