SET(ITEMS
    )

FOREACH(ITEM ${ITEMS})
    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
        SET(SOURCES ${SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
        SET(HEADERS ${HEADERS} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
        SET(QML_FILES ${QML_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.js")
        SET(JS_FILES ${JS_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.js")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
        SET(QRC_FILES ${QRC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ts")
        SET(TS_FILES ${TS_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ts")
    ENDIF()

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qm")
        SET(QM_FILES ${QM_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qm")
    ENDIF()

ENDFOREACH()

SET(PROJECT_SOURCES ${PROJECT_SOURCES} ${SOURCES} CACHE INTERNAL "")
SET(PROJECT_HEADERS ${PROJECT_HEADERS} ${HEADERS} CACHE INTERNAL "")
SET(PROJECT_QML_FILES ${PROJECT_QML_FILES} ${QML_FILES} CACHE INTERNAL "")
SET(PROJECT_JS_FILES ${PROJECT_JS_FILES} ${JS_FILES} CACHE INTERNAL "")
SET(PROJECT_QRC_FILES ${PROJECT_QRC_FILES} ${QRC_FILES} CACHE INTERNAL "")
SET(PROJECT_TS_FILES ${PROJECT_TS_FILES} ${TS_FILES} CACHE INTERNAL "")
SET(PROJECT_QM_FILES ${PROJECT_QM_FILES} ${QM_FILES} CACHE INTERNAL "")

MESSAGE("CURRENT FOLDER: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE("PROJECT_SOURCES: ${PROJECT_SOURCES}")
MESSAGE("PROJECT_HEADERS: ${PROJECT_HEADERS}")
MESSAGE("PROJECT_QML_FILES: ${PROJECT_QML_FILES}")
MESSAGE("PROJECT_JS_FILES: ${PROJECT_JS_FILES}")
MESSAGE("QRC_FILES: ${PROJECT_QRC_FILES}")
MESSAGE("TS_FILES: ${PROJECT_TS_FILES}")
MESSAGE("QM_FILES: ${PROJECT_QM_FILES}")

SET(SUB_FOLDERS
)

FOREACH(FOLDER ${SUB_FOLDERS})
    # INCLUDE_DIRECTORIES(${FOLDER})
    ADD_SUBDIRECTORY(${FOLDER})
ENDFOREACH()
